# CP468_TermProject

./: .gitignore  debug_backtracking.py  pyproject.toml  readme.md  report_notes.txt  requirements.txt
benchmarks/: bench_backtracking.py  bench_minconflicts.py
benchmarks/results/: minconflicts_grid.csv  minconflicts_grid_improved.csv  minconflicts_results.csv  presentation_demo.csv  solution_n10.csv  solution_n20.csv  solution_n50.csv
notebooks/: exploration.ipynb  minconficts_visualizations.ipynb  minconflicts_analysis.ipynb  visualizations_improved.ipynb  visualizations_minconflicts.ipynb
scripts/: make_poster.py  profile_numba.py  run_large.sh  run_required_sizes.sh  run_small.sh
src/nqueens/: __init__,py  __init__.py  cli.py  common_arrays.py  config.py  heuristics.py  instrumentation.py  minconflicts_csv_generator.py  sampling.py  solver_backtracking.py  solver_minconflicts.py  validation.py  visualize.py
tests/: test_minconflicts_small.py  test_validation.py
