# pyproject.toml — packaging metadata (PEP 621)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nqueens-minconflicts"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "numba>=0.59",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.9",
  "pandas>=2.2",
  "pytest>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
